tests/fixtures/positive/licensing/OptInMarkerNotRecognised.kt
package test

@OptIn(RemovedExperimentalApi::class)
fun staleMarker() {
}
