tests/fixtures/negative/empty-blocks/EmptyWhileBlock.kt
package fixtures.negative.emptyblocks

fun spin(condition: Boolean) {
    while (condition) {
        process()
    }
}
